Constructor Changed the Assignment of defaultTableData From new Integer() to Integer.valueOf().